--- a/TODO
+++ b/TODO
@@ -1,1 +1,9 @@
+Caching dispatch for better performance
 
+More docs, API reference
+
+Test coverage
+
+Other method combiners
+
+setup.py, appropriate directory structure
